change data based on config file

--- a/data_anonymizer/config.yml
+++ b/data_anonymizer/config.yml
@@ -5,15 +5,25 @@ storage:
   database: anonymizer
 anonymize:
   core_users:
-    first_name:
-      type: firstname
-    last_name:
-      type: lastname
-    middle_name:
-      type: middlename
-    bit_academy_start_date:
-      type: date
-      data: 22-2-2020
-    password:
-      type: static
-      data: $2a$10$/2BXXQ3fmNBGq9sB41epNu95YVup5Dao2RDnzdBvG7GNAG27C/Oc2
+    iterator:
+      name: id
+    columns:
+      first_name:
+        type: first_name
+      last_name:
+        type: last_name
+      middle_name:
+        type: middle_name
+      bit_academy_start_date:
+        type: date
+        data: 22-3-2020
+      password:
+        type: string
+        data: $2a$10$/2BXXQ3fmNBGq9sB41epNu95YVup5Dao2RDnzdBvG7GNAG27C/Oc2
+  core_credits:
+    iterator:
+      name: user_id
+    columns:
+      value:
+        type: int
+        data: 10
